<resources>
    <string name="app_name">Got It?</string>
    <string name="facebook_app_id">733196167069619</string>
    <string name="fb_login_protocol_scheme">fb733196167069619</string>
    <string name="title_activity_wall">Muro</string>
    <string name="title_wall">Principal</string>
    <string name="title_personal">Personal</string>

    <string name="google_maps_API_key">AIzaSyCEvn7WLr65SqDFToe6S1QKBzzHc2hyULM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strPersonal">Personal</string>
    <string name="strWall">Muro</string>
    <string name="title_activity_personal">Personal</string>
    <string name="tab_text_1">Productos</string>
    <string name="tab_text_2">Servicios</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">TabbedActiv</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="orange">#ff9900</string>
    <string name="blue">#00c5ff</string>
    <string name="firebaseSuccess">Se ha agregado exitosamente el registro</string>
    <string name="firebaseFailure">Se ha producido un error</string>
    <string name="logoutStr">Logout</string>
    <string name="aboutStr">Acerca De</string>
    <string name="wallTitle">Muro</string>
    <string name="addProdStr">Agregar Producto</string>
    <string name="strDatosPrinc">DATOS PRINCIPALEs</string>
    <string name="insTitleStr">Inserte título</string>
    <string name="pabloStr">Pablo Alejandro Sánchez Tadeo A01377515</string>
    <string name="kevinStr">Kyungtak Woo A01372055</string>
    <string name="sergioStr">Sergio Alberto Hernández Méndez A01371446</string>
    <string name="erickStr">Sergio Erick Chávez Flores A01371147</string>
    <string name="adrianStr">Sergio Adrian González Hidalgo A01371584</string>
    <string name="materiaStr">Proyectos de desarrollo para dispositivos móviles</string>


</resources>
